test: consolidate canonical job testing
Split source testing into Docker-free and fixture-backed gates, add required/optional selection semantics, and harden fixture lifecycle and assertions across source, published, and runtime-image execution.